# research-agent-wml

./: README.md
research-agent/: .gitignore  README.md  pyproject.toml  verify_step1.py
research-agent/src/: __init__.py  agent.py  llm.py  main.py  models.py  orchestrator.py  report.py  search.py  web.py
research-agent/src/agents/: __init__.py  analyst.py  critic.py  planner.py  synthesizer.py
research-agent/static/: style.css
research-agent/templates/: index.html  research.html
research-agent/tests/: conftest.py  test_agent.py  test_llm.py  test_models.py  test_search.py
