[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "tavily-python",
    "pydantic",
    "httpx",
    "rich",
    "python-dotenv",
    "tenacity",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "sse-starlette",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
research-agent = "src.main:main"
research-agent-web = "src.web:run"

[tool.setuptools]
packages = ["src"]
